# justblend

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  adapters.py  run.py
bindings/: python.cpp
cmake/: justblendConfig.cmake.in
docs/: generate_readme_figures.py
examples/cpp/: 01_basic_2d.cpp  02_robot_joints_scurve.cpp  03_blend_comparison.cpp  CMakeLists.txt
examples/python/: 01_basic_2d.py  02_robot_joints_scurve.py  03_blend_comparison.py  _plot.py
include/justblend/: justblend.hpp  s_curve.hpp  trajectory.hpp  trajectory_generator.hpp  trapezoidal.hpp  types.hpp
python/justblend/: __init__.py  _core.pyi  _typing.pyi
src/: s_curve.cpp  trajectory.cpp  trajectory_generator.cpp  trapezoidal.cpp
src/internal/: blend.cpp  blend.hpp  planner.cpp  planner.hpp  scurve_profile.cpp  scurve_profile.hpp  segment.hpp  trap_profile.cpp  trap_profile.hpp
tests/cpp/: CMakeLists.txt  test_blends.cpp  test_corner_handling.cpp  test_sampling.cpp  test_scurve.cpp  test_trajectory_features.cpp  test_trap.cpp
tests/data/: waypoints.json
tests/python/: conftest.py  generate_reference.py  test_api.py  test_parity_with_reference.py
tests/python/reference_outputs/: demo_3d__scurve__hybrid__hermite.npz  demo_3d__scurve__hybrid__parabolic.npz  demo_3d__scurve__strict_corners__hermite.npz  demo_3d__scurve__strict_corners__parabolic.npz  demo_3d__scurve__use_blending__hermite.npz  demo_3d__scurve__use_blending__parabolic.npz  demo_3d__trap__hybrid__parabolic.npz  demo_3d__trap__strict_corners__parabolic.npz  two_segments_2d__scurve__hybrid__hermite.npz  two_segments_2d__scurve__hybrid__parabolic.npz  two_segments_2d__scurve__strict_corners__hermite.npz  two_segments_2d__scurve__strict_corners__parabolic.npz  two_segments_2d__scurve__use_blending__hermite.npz  two_segments_2d__scurve__use_blending__parabolic.npz  two_segments_2d__trap__hybrid__parabolic.npz  two_segments_2d__trap__strict_corners__parabolic.npz
