[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "justblend"
version = "0.1.0"
description = "Closed-form N-dimensional trajectory generator with velocity/acceleration/jerk limiting and smooth corner blends"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Saif Sidhik", email = "mail@saifsidhik.page" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.21"]

[project.urls]
Repository = "https://github.com/justagist/justblend"

[project.optional-dependencies]
test = ["pytest>=7"]
plot = ["matplotlib>=3.4"]
bench = ["ruckig>=0.9", "toppra>=0.6"]

[tool.scikit-build]
minimum-version = "0.10"
cmake.version = ">=3.18"
cmake.build-type = "Release"
# The package is assembled entirely by the CMake install rules (guarded by
# SKBUILD); disable source-tree package auto-detection so a stale in-tree
# _core*.so from a dev build can never leak into the wheel.
wheel.packages = []
build-dir = "build/{wheel_tag}"
# Keep the sdist to what a source build needs; benchmarks, docs figures and
# the parity fixtures are repo-only.
sdist.exclude = ["benchmarks/", "docs/", "tests/", "examples/", ".github/"]

[tool.cibuildwheel]
# requires-python >= 3.9 prunes older CPythons automatically. musllinux is
# skipped because Eigen is provisioned via dnf below.
skip = "*musllinux*"
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"
test-requires = "pytest"
test-command = "pytest {project}/tests/python -q"

[tool.cibuildwheel.linux]
before-all = "dnf install -y epel-release && dnf install -y eigen3-devel"

[tool.scikit-build.cmake.define]
JUSTBLEND_BUILD_TESTS = "OFF"
JUSTBLEND_BUILD_EXAMPLES = "OFF"
JUSTBLEND_BUILD_PYTHON_BINDINGS = "ON"
